chore(design): fix background color of button on ie

--- a/src/components/dashboard-digest-popup-list/_styles.scss
+++ b/src/components/dashboard-digest-popup-list/_styles.scss
@@ -26,6 +26,7 @@ $dashboard-digest-backdrop-z-index: 99999;
   white-space: nowrap;
 
   color: $brand-primary-new;
+  background-color: #fff;
   height: 40px;
   padding-left: 16px;
   padding-right: 16px;
